# next-holiday-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  testing-api.py  testing-calendarific.ipynb
src/next_holiday_bot/: next_holiday.py
